WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227454
REGRESSION (
r279305
) [Mac DEBUG] 4 SOAuthorizationRedirect Tests are Crashing with Assert: !m_sheetWindow
https://bugs.webkit.org/show_bug.cgi?id=227454
Summary
REGRESSION (r279305) [Mac DEBUG] 4 SOAuthorizationRedirect Tests are Crashing...
Eric Hutchison
Reported
2021-06-28 10:41:45 PDT
TestWebKitAPI.SOAuthorizationRedirect.DismissUIDuringHiding TestWebKitAPI.SOAuthorizationRedirect.DismissUIDuringHidingThenAnother TestWebKitAPI.SOAuthorizationRedirect.DismissUIDuringMiniaturization TestWebKitAPI.SOAuthorizationRedirect.DismissUIDuringMiniaturizationThenAnother These tests are failing with assert !m_sheetWindow introduced in
r279305
.
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.SOAuthorizationRedirect.DismissUIDuringHiding&test=TestWebKitAPI.SOAuthorizationRedirect.DismissUIDuringHidingThenAnother&test=TestWebKitAPI.SOAuthorizationRedirect.DismissUIDuringMiniaturization&test=TestWebKitAPI.SOAuthorizationRedirect.DismissUIDuringMiniaturizationThenAnother
TestWebKitAPI.SOAuthorizationRedirect.DismissUIDuringMiniaturization ASSERTION FAILED: !m_sheetWindow /Volumes/Data/worker/bigsur-debug/build/Source/WebKit/UIProcess/Cocoa/SOAuthorization/SOAuthorizationSession.mm(153) : void WebKit::SOAuthorizationSession::becomeCompleted() 1 0x109389299 WTFCrash 2 0x11186adfb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x112d60ad5 WebKit::SOAuthorizationSession::becomeCompleted() 4 0x112d63783 WebKit::SOAuthorizationSession::abort() 5 0x112d68656 -[WKSOAuthorizationDelegate authorizationDidCancel:] 6 0x10322de4a TestWebKitAPI::SOAuthorizationRedirect_DismissUIDuringMiniaturization_Test::TestBody() 7 0x1036417e4 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 8 0x103603fdb void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 9 0x103603f13 testing::Test::Run() 10 0x1036050e4 testing::TestInfo::Run() 11 0x103606225 testing::TestSuite::Run() 12 0x10361534d testing::internal::UnitTestImpl::RunAllTests() 13 0x103646e24 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 14 0x103614ceb bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 15 0x103614bbd testing::UnitTest::Run() 16 0x103331691 RUN_ALL_TESTS() 17 0x103331622 TestWebKitAPI::TestsController::run(int, char**) 18 0x1035cb2ef main 19 0x7fff204f6f5d start 20 0x2
Attachments
Patch
(1.88 KB, patch)
2021-06-28 15:34 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-06-28 10:42:51 PDT
<
rdar://problem/79871423
>
Brent Fulgham
Comment 2
2021-06-28 15:34:24 PDT
Created
attachment 432432
[details]
Patch
Kate Cheney
Comment 3
2021-06-28 15:38:17 PDT
Comment on
attachment 432432
[details]
Patch r=me
Brent Fulgham
Comment 4
2021-06-28 15:42:41 PDT
Comment on
attachment 432432
[details]
Patch Will cq+ once EWS is finished.
EWS
Comment 5
2021-06-28 16:57:02 PDT
Committed
r279352
(
239220@main
): <
https://commits.webkit.org/239220@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 432432
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug